--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbc3482d",
+   "id": "2c0c8dcb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def copy_filtered_data(source_sheet, target_sheet, unique_value):\n",
+    "    for row in range(2, source_sheet.max_row + 1):\n",
+    "        sf_value = source_sheet.cell(row=row, column=5).value  # Assuming SF column is the 5th column (index 4)\n",
+    "        if sf_value == unique_value:\n",
+    "            target_sheet.append([source_sheet.cell(row=row, column=col).value for col in range(1, source_sheet.max_column + 1)])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b4106af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +79,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bd6fc71",
+   "id": "5e459bde",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e41bcf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85d66c53",
+   "id": "00f993f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "706c83dc",
+   "id": "6b10ccd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2b367c66",
+   "id": "608ce08f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac3839af",
+   "id": "ec02fc9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "88e98e9a",
+   "id": "f6f43826",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "8af54e09",
+   "id": "9cad4ada",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf90d8f6",
+   "id": "b9b16f65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fd55b82",
+   "id": "360db79b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -444,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b85df544",
+   "id": "0af9b711",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -452,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0745ec75",
+   "id": "76478923",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -460,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e3fd0e4",
+   "id": "887de538",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -468,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "321a562d",
+   "id": "e7d46a19",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -476,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "69ed9e32",
+   "id": "1c058bca",
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc487652",
+   "id": "a8f54ae4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -542,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "135baaae",
+   "id": "c88368ff",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -550,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5d58a35",
+   "id": "dd394ce9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -558,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20aaf1af",
+   "id": "c2bfca39",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -566,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3d9e7cc2",
+   "id": "7edf1a35",
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aeb70504",
+   "id": "f8fb9e39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1133cef3",
+   "id": "0e367162",
    "metadata": {},
    "outputs": [],
    "source": [
