--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c0c8dcb",
+   "id": "59f10b16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openpyxl import load_workbook\n",
+    "from openpyxl.utils import get_column_letter\n",
+    "\n",
+    "# Load the workbook\n",
+    "workbook = load_workbook('your_workbook.xlsx')\n",
+    "\n",
+    "# Select the worksheet\n",
+    "worksheet = workbook['Your_Sheet']\n",
+    "\n",
+    "# Get the range of cells in the original column\n",
+    "original_column = worksheet['E']  # Assuming the SF column is column E\n",
+    "\n",
+    "# Insert a new column after the original column\n",
+    "new_column_index = original_column[0].column + 1\n",
+    "worksheet.insert_cols(new_column_index)\n",
+    "\n",
+    "# Get the letter of the new column\n",
+    "new_column_letter = get_column_letter(new_column_index)\n",
+    "\n",
+    "# Iterate through each cell in the original column and copy the formula\n",
+    "for cell in original_column:\n",
+    "    worksheet[f'{new_column_letter}{cell.row}'].value = cell.value\n",
+    "\n",
+    "# Save the workbook\n",
+    "workbook.save('your_modified_workbook.xlsx')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee3f52a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b4106af",
+   "id": "d2360268",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e459bde",
+   "id": "8034c571",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -87,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e41bcf0",
+   "id": "38f00e0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00f993f8",
+   "id": "753ae073",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "6b10ccd4",
+   "id": "a26f096d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "608ce08f",
+   "id": "767a3c58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec02fc9b",
+   "id": "aba0ba80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f6f43826",
+   "id": "e54678fc",
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "9cad4ada",
+   "id": "a1569cb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9b16f65",
+   "id": "2864f613",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "360db79b",
+   "id": "3232716b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -466,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0af9b711",
+   "id": "bac6e6ae",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -474,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76478923",
+   "id": "dec5a7bd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -482,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "887de538",
+   "id": "50144335",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -490,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7d46a19",
+   "id": "560b905a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -498,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1c058bca",
+   "id": "36e292c7",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8f54ae4",
+   "id": "c9f4b0a8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -564,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c88368ff",
+   "id": "10ced99c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -572,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd394ce9",
+   "id": "de4e96bc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -580,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2bfca39",
+   "id": "e4d805eb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -588,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7edf1a35",
+   "id": "b9a8c1e5",
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8fb9e39",
+   "id": "4113ffaf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,7 +855,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e367162",
+   "id": "f36655c8",
    "metadata": {},
    "outputs": [],
    "source": [
