--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59f10b16",
+   "id": "43daf217",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import win32com.client as win32\n",
+    "\n",
+    "# Open Excel application\n",
+    "excel = win32.Dispatch(\"Excel.Application\")\n",
+    "\n",
+    "# Open the workbook\n",
+    "workbook = excel.Workbooks.Open(r'path\\to\\your\\workbook.xlsx')\n",
+    "\n",
+    "# Get the active sheet\n",
+    "sheet = workbook.ActiveSheet\n",
+    "\n",
+    "# Get the used range of column SF\n",
+    "sf_column = sheet.Range(\"SF:SF\")\n",
+    "\n",
+    "# Copy the values from column SF\n",
+    "sf_column.Copy()\n",
+    "\n",
+    "# Paste the values as values (result of formula) into a new column SFV\n",
+    "sfv_column = sheet.Range(\"SFV1\")\n",
+    "sfv_column.PasteSpecial(Paste=-4163, Operation=-4144, SkipBlanks=False, Transpose=False)\n",
+    "\n",
+    "# Save the workbook\n",
+    "workbook.Save()\n",
+    "\n",
+    "# Close the workbook and Excel application\n",
+    "workbook.Close()\n",
+    "excel.Quit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "953e120d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee3f52a4",
+   "id": "60d0e9e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2360268",
+   "id": "d2e39849",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8034c571",
+   "id": "36fb7f7f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -121,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38f00e0c",
+   "id": "5b2cda8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "753ae073",
+   "id": "41e4d22e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a26f096d",
+   "id": "52a48657",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "767a3c58",
+   "id": "13f925ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aba0ba80",
+   "id": "c3b0a7b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e54678fc",
+   "id": "0fb6599b",
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a1569cb9",
+   "id": "c5ba0f65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2864f613",
+   "id": "cdab0695",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3232716b",
+   "id": "28f0d8fb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -500,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bac6e6ae",
+   "id": "90946a76",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -508,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dec5a7bd",
+   "id": "ef649acd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -516,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50144335",
+   "id": "56957a0c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -524,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "560b905a",
+   "id": "3b526811",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -532,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "36e292c7",
+   "id": "1d58ca2c",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9f4b0a8",
+   "id": "402a11e6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -598,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10ced99c",
+   "id": "69f3c559",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -606,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de4e96bc",
+   "id": "9a2b40df",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -614,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4d805eb",
+   "id": "c3a1b2e6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -622,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b9a8c1e5",
+   "id": "45cbc0ce",
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4113ffaf",
+   "id": "df54eddb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f36655c8",
+   "id": "f0da80fb",
    "metadata": {},
    "outputs": [],
    "source": [
