--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43daf217",
+   "id": "30f8b0a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,17 +15,20 @@
     "# Open the workbook\n",
     "workbook = excel.Workbooks.Open(r'path\\to\\your\\workbook.xlsx')\n",
     "\n",
-    "# Get the active sheet\n",
-    "sheet = workbook.ActiveSheet\n",
+    "# Get the specific sheet (e.g., Actuals($))\n",
+    "sheet = workbook.Sheets(\"Actuals($)\")\n",
     "\n",
-    "# Get the used range of column SF\n",
-    "sf_column = sheet.Range(\"SF:SF\")\n",
+    "# Get the range of column SF\n",
+    "sf_column = sheet.Columns(\"SF\")\n",
     "\n",
     "# Copy the values from column SF\n",
     "sf_column.Copy()\n",
     "\n",
+    "# Find the next available column index for SFV\n",
+    "sfv_column_index = sf_column.Column + 1\n",
+    "\n",
     "# Paste the values as values (result of formula) into a new column SFV\n",
-    "sfv_column = sheet.Range(\"SFV1\")\n",
+    "sfv_column = sheet.Cells(1, sfv_column_index)\n",
     "sfv_column.PasteSpecial(Paste=-4163, Operation=-4144, SkipBlanks=False, Transpose=False)\n",
     "\n",
     "# Save the workbook\n",
@@ -39,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "953e120d",
+   "id": "98caa291",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60d0e9e9",
+   "id": "2e644907",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2e39849",
+   "id": "98a31b9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36fb7f7f",
+   "id": "12dd4d43",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -157,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b2cda8e",
+   "id": "28d675ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41e4d22e",
+   "id": "0daf7540",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "52a48657",
+   "id": "16583480",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "13f925ca",
+   "id": "3dba2571",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3b0a7b8",
+   "id": "973bf4a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0fb6599b",
+   "id": "8c871222",
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "c5ba0f65",
+   "id": "0495204e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdab0695",
+   "id": "49cc2e7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28f0d8fb",
+   "id": "15e23cc0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -536,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90946a76",
+   "id": "794f9914",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -544,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef649acd",
+   "id": "8c124106",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -552,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56957a0c",
+   "id": "155d5e6b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -560,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b526811",
+   "id": "81d589ba",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -568,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1d58ca2c",
+   "id": "d53eca61",
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "402a11e6",
+   "id": "1f43a7d7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -634,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69f3c559",
+   "id": "ed7cda76",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -642,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a2b40df",
+   "id": "ba33eacf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -650,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3a1b2e6",
+   "id": "23851e27",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -658,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "45cbc0ce",
+   "id": "bfd32c84",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df54eddb",
+   "id": "65226f72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0da80fb",
+   "id": "bfb6d538",
    "metadata": {},
    "outputs": [],
    "source": [
