--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,6 +3,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9bd2626f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openpyxl import load_workbook\n",
+    "from openpyxl.utils.dataframe import dataframe_to_rows\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load the original workbook\n",
+    "original_workbook = load_workbook('original_workbook.xlsx')\n",
+    "\n",
+    "# Identify the sheet and column containing the filter condition\n",
+    "target_sheet_name = 'TargetSheet'\n",
+    "filter_column_name = 'ColumnA'  # Change this to the actual column name\n",
+    "\n",
+    "# Get the target sheet\n",
+    "target_sheet = original_workbook[target_sheet_name]\n",
+    "\n",
+    "# Extract the data from the target sheet into a pandas DataFrame\n",
+    "data = target_sheet.values\n",
+    "columns = next(data)\n",
+    "df = pd.DataFrame(data, columns=columns)\n",
+    "\n",
+    "# Filter the DataFrame based on the filter column\n",
+    "filtered_df = df[df[filter_column_name] == 'YourCondition']\n",
+    "\n",
+    "# Create a new workbook\n",
+    "output_workbook = load_workbook()\n",
+    "\n",
+    "# Copy the target sheet along with formatting and formulae\n",
+    "output_workbook[target_sheet_name] = target_sheet\n",
+    "\n",
+    "# Write the filtered DataFrame to the target sheet\n",
+    "for row in dataframe_to_rows(filtered_df, index=False, header=True):\n",
+    "    output_workbook[target_sheet_name].append(row)\n",
+    "\n",
+    "# Save the new workbook\n",
+    "output_workbook.save('filtered_workbook.xlsx')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "30f8b0a6",
    "metadata": {},
    "outputs": [],
