--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bd2626f",
+   "id": "c1df1850",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openpyxl import load_workbook\n",
+    "from openpyxl.utils import get_column_letter\n",
+    "from openpyxl.styles import PatternFill\n",
+    "\n",
+    "# List of strings\n",
+    "list_of_strings = ['String1', 'String2', 'String3']  # Update with your list of strings\n",
+    "\n",
+    "for string_item in list_of_strings:\n",
+    "    # Step 1: Open the original workbook and create a copy\n",
+    "    original_workbook = load_workbook('original_workbook.xlsx')\n",
+    "    output_workbook = original_workbook.copy_workbook()\n",
+    "\n",
+    "    # Step 2: Copy the formula results from column 'S' to a new column 'SV'\n",
+    "    source_sheet = output_workbook['YourSheetName']  # Update with your sheet name\n",
+    "    sv_column_index = source_sheet.max_column + 1\n",
+    "    for row in source_sheet.iter_rows(min_row=2, max_row=source_sheet.max_row, min_col=19, max_col=19):  # Column S is column 19\n",
+    "        source_sheet.cell(row=row[0].row, column=sv_column_index).value = row[0].value  # Copy formula result to new column\n",
+    "\n",
+    "    # Step 3: Search for the list item in column 'SV' in sheet 'AH', copy data to new sheet 'AHV', and delete 'AH' sheet\n",
+    "    ah_sheet = output_workbook['AH']\n",
+    "    ahv_sheet = output_workbook.create_sheet(title='AHV')\n",
+    "    ahv_row_index = 1\n",
+    "    for row in ah_sheet.iter_rows(min_row=2, max_row=ah_sheet.max_row, min_col=sv_column_index, max_col=sv_column_index):\n",
+    "        if row[0].value == string_item:\n",
+    "            for cell in row:\n",
+    "                ahv_sheet.cell(row=ahv_row_index, column=cell.column).value = cell.value\n",
+    "            ahv_row_index += 1\n",
+    "    output_workbook.remove(ah_sheet)  # Delete 'AH' sheet\n",
+    "\n",
+    "    # Step 4: Save the new workbook\n",
+    "    output_workbook.save(f'output_workbook_{string_item}.xlsx')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11578e6a",
    "metadata": {},
    "outputs": [],
    "source": [
