--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1df1850",
+   "id": "7f0abcc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openpyxl import load_workbook\n",
+    "from openpyxl import Workbook\n",
+    "\n",
+    "# Load the original workbook\n",
+    "original_workbook = load_workbook('original_workbook.xlsx')\n",
+    "\n",
+    "# Create a new workbook\n",
+    "copied_workbook = Workbook()\n",
+    "\n",
+    "# Copy each sheet from the original workbook to the new workbook\n",
+    "for sheet_name in original_workbook.sheetnames:\n",
+    "    original_sheet = original_workbook[sheet_name]\n",
+    "    copied_sheet = copied_workbook.create_sheet(title=sheet_name)\n",
+    "    for row in original_sheet.iter_rows(values_only=True):\n",
+    "        copied_sheet.append(row)\n",
+    "\n",
+    "# Save the copied workbook with a different filename\n",
+    "copied_workbook.save('copied_workbook.xlsx')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa37a432",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11578e6a",
+   "id": "13cf2215",
    "metadata": {},
    "outputs": [],
    "source": [
