--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f0abcc9",
+   "id": "9b06214e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil\n",
+    "\n",
+    "# Path to the original workbook\n",
+    "original_workbook_path = 'path/to/original_workbook.xlsx'\n",
+    "\n",
+    "# Path where you want to create the duplicate workbook\n",
+    "duplicate_workbook_path = 'path/to/duplicate_workbook.xlsx'\n",
+    "\n",
+    "# Copy the original workbook to create the duplicate\n",
+    "shutil.copyfile(original_workbook_path, duplicate_workbook_path)\n",
+    "\n",
+    "print(\"Workbook duplicated successfully!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fe984a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa37a432",
+   "id": "adabc755",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13cf2215",
+   "id": "2c18a9fd",
    "metadata": {},
    "outputs": [],
    "source": [
