--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b06214e",
+   "id": "9a190bf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyautogui\n",
+    "import time\n",
+    "\n",
+    "# Assuming the active cell is in column D and you want to paste values in column E\n",
+    "# Move to the first cell in column D\n",
+    "pyautogui.hotkey('ctrl', 'g')\n",
+    "pyautogui.typewrite('D1')\n",
+    "pyautogui.press('enter')\n",
+    "\n",
+    "# Copy values from column D\n",
+    "pyautogui.hotkey('ctrl', 'c')\n",
+    "\n",
+    "# Move to the first cell in column E\n",
+    "pyautogui.hotkey('ctrl', 'g')\n",
+    "pyautogui.typewrite('E1')\n",
+    "pyautogui.press('enter')\n",
+    "\n",
+    "# Paste values in column E\n",
+    "pyautogui.hotkey('ctrl', 'alt', 'v')\n",
+    "pyautogui.press('v')\n",
+    "\n",
+    "# Wait for the paste operation to complete\n",
+    "time.sleep(1)\n",
+    "\n",
+    "print(\"Values from column D pasted into column E!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e86c3e98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fe984a9",
+   "id": "f0e597ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adabc755",
+   "id": "a9750b75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c18a9fd",
+   "id": "0c3425c2",
    "metadata": {},
    "outputs": [],
    "source": [
