--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,41 +3,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a190bf9",
+   "id": "70f4d037",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyautogui\n",
-    "import time\n",
+    "from openpyxl import load_workbook\n",
     "\n",
-    "# Assuming the active cell is in column D and you want to paste values in column E\n",
-    "# Move to the first cell in column D\n",
-    "pyautogui.hotkey('ctrl', 'g')\n",
-    "pyautogui.typewrite('D1')\n",
-    "pyautogui.press('enter')\n",
+    "# Load the workbook\n",
+    "workbook = load_workbook('your_workbook.xlsx')\n",
     "\n",
-    "# Copy values from column D\n",
-    "pyautogui.hotkey('ctrl', 'c')\n",
+    "# Select the active sheet (you can change this if you want to select a specific sheet)\n",
+    "sheet = workbook.active\n",
     "\n",
-    "# Move to the first cell in column E\n",
-    "pyautogui.hotkey('ctrl', 'g')\n",
-    "pyautogui.typewrite('E1')\n",
-    "pyautogui.press('enter')\n",
+    "# Define the column to copy (for example, column D)\n",
+    "column_to_copy = sheet['D']\n",
     "\n",
-    "# Paste values in column E\n",
-    "pyautogui.hotkey('ctrl', 'alt', 'v')\n",
-    "pyautogui.press('v')\n",
+    "# Create a new column for pasting the values (for example, column E)\n",
+    "column_to_paste = sheet['E']\n",
     "\n",
-    "# Wait for the paste operation to complete\n",
-    "time.sleep(1)\n",
+    "# Iterate over the cells in the column to copy\n",
+    "for i, cell in enumerate(column_to_copy, start=1):\n",
+    "    # Evaluate the formula to get the value\n",
+    "    value = cell.value\n",
+    "    # Paste the value into the corresponding cell in the new column\n",
+    "    column_to_paste[i].value = value\n",
     "\n",
-    "print(\"Values from column D pasted into column E!\")\n"
+    "# Save the workbook\n",
+    "workbook.save('your_updated_workbook.xlsx')\n",
+    "\n",
+    "print(\"Values copied from column D and pasted into column E!\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e86c3e98",
+   "id": "6abce6b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0e597ba",
+   "id": "39fd42c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9750b75",
+   "id": "164ca973",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c3425c2",
+   "id": "c7927603",
    "metadata": {},
    "outputs": [],
    "source": [
