--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70f4d037",
+   "id": "1c95050c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openpyxl import load_workbook\n",
+    "\n",
+    "# Load the workbook\n",
+    "workbook = load_workbook('your_workbook.xlsx')\n",
+    "\n",
+    "# Select the specific sheet (replace 'Sheet A' with the actual name of your sheet)\n",
+    "sheet = workbook['Sheet A']\n",
+    "\n",
+    "# Create a new column index (for example, column F)\n",
+    "column_index = 6  # Column F corresponds to index 6 (0-indexed)\n",
+    "\n",
+    "# Iterate over the cells in column D and paste values into column F\n",
+    "for i, cell in enumerate(sheet['D'], start=1):\n",
+    "    # Evaluate the formula to get the value\n",
+    "    value = cell.value\n",
+    "    # Paste the value into the corresponding cell in the new column (Column F)\n",
+    "    sheet.cell(row=i, column=column_index, value=value)\n",
+    "\n",
+    "# Save the workbook\n",
+    "workbook.save('your_updated_workbook.xlsx')\n",
+    "\n",
+    "print(\"Values copied from column D and pasted into column F!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1b6f873",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6abce6b4",
+   "id": "e9daaa4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39fd42c2",
+   "id": "c70124f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "164ca973",
+   "id": "1d69c6f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7927603",
+   "id": "90fcd4c3",
    "metadata": {},
    "outputs": [],
    "source": [
