--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,136 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c95050c",
+   "id": "75f1b8fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xlwings as xw\n",
+    "\n",
+    "# Open the workbook\n",
+    "wb = xw.Book(\"example.xlsx\")\n",
+    "\n",
+    "# Specify the sheet and column you want to copy from\n",
+    "sheet = wb.sheets[\"Sheet1\"]\n",
+    "column_to_copy = \"A\"\n",
+    "\n",
+    "# Find the last row with data in the column\n",
+    "last_row = sheet.range(f\"{column_to_copy}:{column_to_copy}\").end(\"down\").row\n",
+    "\n",
+    "# Get the range containing the column data\n",
+    "range_to_copy = sheet.range(f\"{column_to_copy}1:{column_to_copy}{last_row}\")\n",
+    "\n",
+    "# Extract the values from the range (result of formulas)\n",
+    "values = range_to_copy.value\n",
+    "\n",
+    "# Paste the values into a new column\n",
+    "new_column = \"E\"\n",
+    "start_cell = f\"{new_column}1\"\n",
+    "end_cell = f\"{new_column}{last_row}\"\n",
+    "sheet.range(start_cell).value = values\n",
+    "\n",
+    "# Save the workbook\n",
+    "wb.save(\"example_with_copied_column.xlsx\")\n",
+    "\n",
+    "# Close the workbook\n",
+    "wb.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f18bde3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Sheet' object has no attribute 'rows'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-dee0865ce7ad>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;31m# Get the last row with data in column A\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0mlast_row\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ms1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcells\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrows\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'E'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'up'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;31m# Define the range where you want to paste the values (in column E)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Sheet' object has no attribute 'rows'"
+     ]
+    }
+   ],
+   "source": [
+    "import xlwings as xw\n",
+    "\n",
+    "# Open the workbook\n",
+    "wb = xw.Book(r\"C:\\\\Users\\\\KS\\\\OneDrive\\\\Documents\\\\test11.xlsx\")\n",
+    "\n",
+    "# Open the sheet\n",
+    "s1 = wb.sheets['s2']\n",
+    "\n",
+    "# Get the range of data in column A\n",
+    "col_A_range = s1.range('E:E')\n",
+    "\n",
+    "# Get the last row with data in column A\n",
+    "last_row = s1.cells(s1.rows.count, 'E').end('up').row\n",
+    "\n",
+    "# Define the range where you want to paste the values (in column E)\n",
+    "col_E_range = s1.range(f'F1:F{last_row}')\n",
+    "\n",
+    "# Copy the values from column A to column E\n",
+    "col_A_range.copy(destination=col_E_range, transpose=True, skip_blanks=True, transpose_dest=True)\n",
+    "\n",
+    "# Close the workbook (optional)\n",
+    "wb.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "df8716a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cell text: None\n",
+      "cell (('Test',), ('JAm',), ('JAm',), ('Ham',), ('Ham',), ('Ham',), ('Ham',), ('Ham',), ('Ham',), ('Ham',))\n"
+     ]
+    }
+   ],
+   "source": [
+    "import win32com.client\n",
+    "\n",
+    "# Open Excel application\n",
+    "excel = win32com.client.Dispatch(\"Excel.Application\")\n",
+    "\n",
+    "# Open the workbook\n",
+    "workbook = excel.Workbooks.Open(r\"C:\\\\Users\\\\KS\\\\OneDrive\\\\Documents\\\\test11.xlsx\")\n",
+    "\n",
+    "# Get the worksheet named \"A\"\n",
+    "sheet = workbook.Sheets(\"S2\")\n",
+    "\n",
+    "# Get the range of column D\n",
+    "column_d = sheet.Columns(\"E\")\n",
+    "\n",
+    "\n",
+    "# Get the cell containing the formula\n",
+    "cell = sheet.Range(\"E1:E10\")  # Replace \"A1\" with your cell address\n",
+    "\n",
+    "# Read the text of the cell (string value)\n",
+    "cell_text = cell.Text\n",
+    "\n",
+    "print(\"Cell text:\", cell_text)\n",
+    "print(\"cell\", cell)\n",
+    "\n",
+    "# Close the workbook\n",
+    "workbook.Close()\n",
+    "\n",
+    "# Quit Excel application\n",
+    "excel.Quit()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9244ccad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1b6f873",
+   "id": "74cc7368",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9daaa4d",
+   "id": "96caf35c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c70124f5",
+   "id": "cfa63363",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d69c6f1",
+   "id": "5de700f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90fcd4c3",
+   "id": "03e6f224",
    "metadata": {},
    "outputs": [],
    "source": [
