--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75f1b8fc",
+   "id": "a8f913cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import xlwings as xw\n",
+    "\n",
+    "# Load your DataFrame (df) and specify the column to copy\n",
+    "col_to_copy = 'Your_Column_Name'  # Replace 'Your_Column_Name' with the actual column name\n",
+    "# Load your DataFrame (df) and specify the column to copy\n",
+    "values = df[col_to_copy].values\n",
+    "\n",
+    "# Start cell where you want to paste the values (e.g., E1)\n",
+    "start_cell = 'E1'\n",
+    "\n",
+    "# Open an Excel workbook\n",
+    "wb = xw.Book('your_workbook.xlsx')  # Replace 'your_workbook.xlsx' with the actual file name\n",
+    "\n",
+    "# Open the specified sheet\n",
+    "sheet = wb.sheets['Sheet1']  # Replace 'Sheet1' with the actual sheet name\n",
+    "\n",
+    "# Write the values to the specified range in the Excel sheet\n",
+    "sheet.range(start_cell).value = values\n",
+    "\n",
+    "# Close the workbook\n",
+    "wb.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0316b48c",
    "metadata": {},
    "outputs": [],
    "source": [
